@@ -14,7 +14,8 @@ using std::string;
 
 
 //
-// Ctor used when reading the logs of the packages from the database
+// Ctor used when reading the logs of the packages from the database.
+// File name, size and eventual symlink destination are known.
 //
 Porg::File::File(string const& name_, ulong size_, string const& ln_name_ /* = "" */)
 :
@@ -23,14 +24,21 @@ Porg::File::File(string const& name_, ulong size_, string const& ln_name_ /* = "
 	m_installed(),
 	m_ln_name(ln_name_)
 {
+	// Just need to check for file existence here.
+
 	struct stat s;
+
 	m_installed = !lstat(m_name.c_str(), &s);
-	//XXX update file size to the log ? (complicated)
+	
+	// TODO: update size
+	// m_size = m_installed ? s.st_size : size_;
+	// TODO: write new size to the log
 }
 
 
 //
-// Ctor used when logging package installations
+// Ctor used when logging package installations.
+// Only the name of the file is known.
 //
 Porg::File::File(string const& name_)
 :
